# ovum-spotlight

./: README.md  __init__.py  _mini_webserver.py  common_types.py  package.json  pyproject.toml  setup_user_plugins.py  spotlight_routes.py  spotlight_sample_node.py  vite.config.js
.githooks/: post-commit.cmd
custom_nodes/ovum_spotlight/: __init__.py  spotlight_sample_node.py
custom_nodes/ovum_spotlight/js/05/: spotlight-helper-focus.js  spotlight-helper-hotkey.js  spotlight-plugin-keyword-link.js  spotlight-plugin-keyword-node.js  spotlight-plugin-sample.js  (+1 more)
js/.unused/: spotlight-plugin-keyword-math.js
js/01/: braces-compat.js  utility.js
js/05/: spotlight-filters.js  spotlight-helper-dom.js  spotlight-helper-graph.js  spotlight-helper-hotkey.js  spotlight-helper-showresult.js  spotlight-nodeinfo.js  spotlight-plugin-keyword-node.js  spotlight-plugin-keyword-primitive.js  spotlight-plugin-sample.js  spotlight-plugin-selection-commands.js  spotlight-registry.js  spotlight-typedefs.js  spotlight.js
js/common/: empty-util.js  ovum_helpers.js  ui.js
js/typings/: ComfyNode.d.ts  app-import-types.d.ts
styles/: daisyui-primevue.css  spotlight.css  tailwind.css
tools/: _json_comparison_tool.py  auto_bump_version.py  auto_bump_version_spotlight.py  extractPrimeVueCSSVariables.js
user_plugins.default/: README.md
user_plugins.default/samples/keywords/: spotlight-plugin-keyword-math.js
user_plugins.default/typedefs/: spotlight-typedefs.js
web/: plusminus_title_helper.js
web/css/: base.css  markdown.css  tailwind.css
web/lgraph/src/: animateJump.ts
